add registration & login page

--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,15 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-bundle": "^1.9",
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/console": "*",
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "*",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "*",
         "symfony/templating": "*",
         "symfony/twig-bundle": "*",
+        "symfony/validator": "*",
         "symfony/webpack-encore-bundle": "^1.0",
         "symfony/yaml": "*"
     },
