--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,8 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    images_directory: '%kernel.project_dir%/public/uploads/images'
+    images_directory_relative: '/uploads/images/'
 
 services:
     # default configuration for services in *this* file
