--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "bootstrap": "^4.1.3",
         "bootstrap-slider": "^10.3.3",
         "jquery": "^3.3.1",
+        "photoswipe": "^4.1.2",
         "popper.js": "^1.14.5"
     }
 }
